deployment/kubernetes/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: readmission-api
  namespace: readmission-mlops
spec:
  selector:
    app: readmission-api
  ports:
    - port: 80
      targetPort: 8000
