deployment/kubernetes/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: readmission-api
  namespace: readmission-mlops
spec:
  rules:
    - host: readmission.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: readmission-api
                port:
                  number: 80
